[package]
name = "apgpk"
version = "0.1.0"
edition = "2021"
authors = ["koro33 <koro33g@gmail.com>"]
description = "Find an awesome PGP key"


[dependencies]
pgp = "0"
anyhow = "1"
chrono = "0"
hex = "0"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }


[profile.release]
lto = true
strip = true
