[package]
name = "apgpk"
version = "0.1.1"
edition = "2021"
authors = ["koro33 <koro33g@gmail.com>"]
license = "AGPL-3.0-only"
description = "Find an awesome PGP key"
readme = "README.md"
homepage = "https://github.com/Koro33/apgpk"
repository = "https://github.com/Koro33/apgpk"


[dependencies]
pgp = "0.10.1"
anyhow = "1.0.71"
chrono = "0.4.26"
hex = "0.4.3"
clap = { version = "4.3.0", features = ["derive"] }
ctrlc = { version = "3.4.0", features = ["termination"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }


[dev-dependencies]
criterion = "0.5.1"


[profile.release]
lto = true
strip = true
