[package]
name = "apgpk-lib"
version = "0.2.0"
edition = "2021"
authors = ["koro33 <koro33g@gmail.com>"]
license = "AGPL-3.0-only"
description = "Find an awesome PGP key"
readme = "README.md"
homepage = "https://github.com/Koro33/apgpk"
repository = "https://github.com/Koro33/apgpk"

[dependencies]
pgp = "0.10.1"
thiserror = "1.0.40"
chrono = "0.4.26"
hex = "0.4.3"
log = "0.4.19"


[dev-dependencies]
criterion = "0.5.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bench]]
name = "task_single_thread"
harness = false
